clusters/production/apps/headlamp-production/namespace-headlamp-production.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp-production
  labels:
    app.kubernetes.io/part-of: production
