clusters/production/apps/headlamp-production/traefik-middleware-authelia-forwardauth.yaml
# ForwardAuth to in-cluster Authelia. Ingress must reference
# headlamp-production-authelia-forwardauth@kubernetescrd (namespace-name@kubernetescrd).
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-forwardauth
  namespace: headlamp-production
spec:
  forwardAuth:
    address: http://authelia.authelia-production.svc.cluster.local/api/authz/forward-auth
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Name
      - Remote-Email
      - Remote-Groups
