clusters/production/apps/headlamp-production/cilium-cluster-nodes-to-http.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cluster-nodes-to-headlamp-http
  namespace: headlamp-production
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: headlamp
  ingress:
  - fromEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "4466"
        protocol: TCP
